[build-system]
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "xarray-nanonis"
authors=[
    {name = "Hao Zhang", email = "zhanghao3859@hotmail.com"},
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "xarray",
    "pandas",
]

[project.entry-points."xarray.backends"]
nanonis = "xarray_nanonis.NanonisBackendEntrypoint:NanonisBackendEntrypoint"

[tool.setuptools_scm]

[tool.ruff]
line-length=120

[tool.ruff.lint]
extend-select = ["I", "PT", "NPY"]
extend-unsafe-fixes = ["F401"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.2.240807",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
